--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div>
                                 <input type="hidden" name="access_key" value="de88f151-0e55-4f53-a2a0-c9be42e71a6d">
                                 <input type="hidden" name="redirect" value="https://Karthik-Mohan19.github.io/
-Karthik-Mohan19.github.io//#contact">
+Karthik-Mohan19.github.io/#contact">
                             </div>
                             <div style="display: flex;flex-wrap: wrap;justify-content: space-between;">
                                 <div><input type="text" name="VisiterName" placeholder="Name" required class="contactip" autocomplete="off"></div>
