--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav id="index">
             <div class="index">
                 <div class="indexLeft" style="overflow-x: hidden;">
-                    <h3 id="hello" data-aos="fade-right"><b>Hell ! ! !</b></h3>
+                    <h3 id="hello" data-aos="fade-right"><b>Hello ! ! !</b></h3>
                     <h2 id="name" data-aos="fade-right"><b><span id="hello">I'm</span> Karthik</b></h2>
                     <h1 id="web" data-aos="fade-right"><b>Web Developer .</b></h1>
                     <div data-aos="fade-right">
