--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav id="index">
             <div class="index">
                 <div class="indexLeft" style="overflow-x: hidden;">
-                    <h3 id="hello" data-aos="fade-right"><b>Hello ! ! !</b></h3>
+                    <h3 id="hello" data-aos="fade-right"><b>Hello ! ! ! !</b></h3>
                     <h2 id="name" data-aos="fade-right"><b><span id="hello">I'm</span> Karthik</b></h2>
                     <h1 id="web" data-aos="fade-right"><b>Web Developer .</b></h1>
                     <div data-aos="fade-right">
@@ -212,8 +212,7 @@
                         <form action="https://api.web3forms.com/submit" method="POST">
                             <div>
                                 <input type="hidden" name="access_key" value="de88f151-0e55-4f53-a2a0-c9be42e71a6d">
-                                <input type="hidden" name="redirect" value="https://Karthik-Mohan19.github.io/
-Karthik-Mohan19.github.io//index.html">
+                                <input type="hidden" name="redirect" value="https://karthik-mohan19.github.io/#contact">
                             </div>
                             <div style="display: flex;flex-wrap: wrap;justify-content: space-between;">
                                 <div><input type="text" name="VisiterName" placeholder="Name" required class="contactip" autocomplete="off"></div>
