--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         HTML, CSS, and JavaScript to create a responsive and interactive user experience. The site is
                         designed to effectively showcase the company's offerings, with a focus on clean design, smooth
                         navigation, and accessibility across devices.</p>
-                    <a href="https://regal-mochi-4cea3a.netlify.app/" class="link">Website Link <i class="fa-solid fa-arrow-up-right-from-square"></i></a><br><br>
+                    <a href="https://mayugamcbe.in/" class="link">Website Link <i class="fa-solid fa-arrow-up-right-from-square"></i></a><br><br>
                 </div>
                 <div class="projectbox" data-aos="zoom-in-left">
                     <div>
