--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="https://www.linkedin.com/in/karthik--mohan19/" class="a"><i class="fa-brands fa-linkedin li"></i></a>
                         <a href="https://github.com/Karthik-Mohan19" class="a"><i class="fa-brands fa-square-github gh"></i></a>
                     </div>
-                    <a href="image/Karthik Mohan CV.pdf" download class="a"><button class="resume">Resume <i
+                    <a href="image/Karthik_Mohan_CV.pdf" download class="a"><button class="resume">Resume <i
                                 class="fa-solid fa-download"></i></button></a><br><br><br><br>
                 </div>
             </div>
